# AIStockAnalyzer

./: .gitignore  Architecture.md  BACKLOG.md  CHANGELOG.md  CodingRule.md  PROJECT_RULE.md  README.md  RoadMap.md  TODO.md  VISION.md  pyproject.toml
config/: settings.toml
docs/: API_SPEC.md  CODING_STANDARD.md  DATABASE_DESIGN.md  DESIGN.md  ENGINE_SPEC.md  FEATURE_LIST.md  INVESTMENT_THEORY.md  RELEASE_PLAN.md  RISK_MANAGEMENT.md  UI_DESIGN.md
src/ai_stock_analyzer/: __init__.py  __main__.py
src/ai_stock_analyzer/analysis/: __init__.py  analyzer.py
src/ai_stock_analyzer/application/: __init__.py  use_case.py
src/ai_stock_analyzer/broker/: __init__.py  broker_interface.py  broker_type.py  client.py
src/ai_stock_analyzer/config/: __init__.py  settings.py
src/ai_stock_analyzer/core/: __init__.py  constants.py  enums.py  exceptions.py
src/ai_stock_analyzer/database/: __init__.py  connection.py  database_manager.py
src/ai_stock_analyzer/indicator/: __init__.py  indicator.py
src/ai_stock_analyzer/models/: __init__.py  position.py  stock.py  trade.py
src/ai_stock_analyzer/presentation/: __init__.py  main_window.py
src/ai_stock_analyzer/service/: __init__.py  base_service.py
src/ai_stock_analyzer/utils/: __init__.py  datetime_utils.py  logger.py  singleton.py
tests/: test_application_bootstrap.py  test_broker_interface.py  test_config_settings.py  test_core.py  test_database_manager.py  test_ibkr_client.py  test_models.py  test_project_skeleton.py  test_repositories.py  test_utils_datetime.py  test_utils_logger.py
(+8 files in other folders)
