[project]
name = "ai-stock-analyzer"
version = "0.1.0"
description = "Professional AI Stock Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibapi>=9.81.1.post1",
    "openai>=1.0.0",
    "plotly>=5.0.0",
    "pydantic-settings>=2.0.0",
    "PySide6>=6.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_stock_analyzer"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ANN",
    "D",
]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
